tests/paczka1/small_fuzzy/38015744.err
Error in line 2: Webyt S606 47,9
Error in line 11: 3Reym4Rbn9n A311 20,2
